# ccdown

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python.yml  release-plz.yml  release.yml  rust.yml
src/: cli.rs  download.rs  errors.rs  lib.rs  main.rs  python.rs
tests/: cli.rs  integration.rs
