[package]
name = "ccdown"
version = "0.6.1"
edition = "2024"
authors = ["4thel00z <4thel00z@gmail.com>"]
description = "A polite and user-friendly downloader for Common Crawl data."
license = "MIT OR Apache-2.0"
rust-version = "1.94"
readme = "README.md"
homepage = "https://tahrioui.com"
repository = "https://github.com/4thel00z/ccdown"
documentation = "https://docs.rs/ccdown"

[lib]
name = "ccdown"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "ccdown"
path = "src/main.rs"

[features]
default = []
python = ["pyo3"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
flate2 = "1.1.0"
futures = "0.3.31"
indicatif = "0.17.11"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
regex = "1.11.1"
reqwest = { version = "0.12.14", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2"
flate2 = "1.1.0"
predicates = "3"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.14", default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
] }
tempfile = "3"
tokio = { version = "1.44.1", features = ["full"] }
wiremock = "0.6"
